Open Packages from the Command Line Closes #19